Renaming to Lingua::ART::Numbers and preparing for Lojban (jbo).

--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-Revision history for Perl extension Lingua::EO::Numbers.
+Revision history for Perl extension Lingua::ART::Numbers.
 
 0.01  Thu Jul  2 20:31:42 2009
     - original version; created by h2xs 1.23 with options
