--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Lingua-EO-Numbers version 0.01
+Lingua-ART-Numbers version 0.01
 ==============================
 
 The README is used to introduce the module and provide instructions on
