--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Lingua-Conlang-Numbers version 0.01
+Lingua-Conlang-Numbers version 0.02
 ===================================
 
 Convert numbers into words in various constructed languages
@@ -7,10 +7,10 @@ INSTALLATION
 
 To install this module type the following:
 
-    perl Makefile.PL
-    make
-    make test
-    make install
+    perl Build.PL
+    ./Build
+    ./Build test
+    ./Build install
 
 DEPENDENCIES
 
