--- a/lib/Lingua/EO/Numbers/EO.pod
+++ b/lib/Lingua/EO/Numbers/EO.pod
@@ -81,14 +81,14 @@ L<Lingua::EO::Supersignoj>, L<http://bertilow.com/pmeg/gramatiko/nombroj/>
 
 =head1 AŬTORO
 
-Nick PATCH, E<lt>n@atemoya.netE<gt>
+Nick PATCH <n@atemoya.net>
 
 =head1 AGNOSKOJ
 
-MORIYA Masaki (alinome Gardejo) tradukis ĉi tiun dokumenton en Esperanton
+MORIYA Masaki (Gardejo) tradukis ĉi tiun dokumenton en Esperanton.
 
 Sean M. Burke verkis la nunan interfacon al L<Lingua::EN::Numbers>, kion ĉi
-tiu modjulo estas bazita
+tiu modjulo estas bazita.
 
 =head1 AŬTORRAJTO KAJ LICENCO
 
@@ -97,7 +97,7 @@ Copyright 2009, 2010 Nick Patch
 This library is free software; you can redistribute it and/or modify it under
 the same terms as Perl itself.
 
-Aŭtorrajto 2009, 2010 Nick Patch
+Aŭtorrajto 2009, 2010 Nick PATCH
 
 Ĉi tiu modjulo estas libera programaro; vi povas redistribui ĝin kaj/aŭ modifi
 ĝin laŭ la sama kondiĉo kiel Perl mem.
