--- a/README
+++ b/README
@@ -30,7 +30,7 @@ the included modules without the need to "use" each one.
 
 COPYRIGHT AND LICENSE
 
-Copyright 2009, 2010 Nick Patch
+Copyright 2009-2011 Nick Patch
 
 This library is free software; you can redistribute it and/or modify it under
 the same terms as Perl itself.
